5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4174/executions/1595_2894.log
== TEST (2019-03-21 21:32:48) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = 45+(int(input(8*15)

# Calculo do valor a ser pago, incluindo o frete:
total = var

# Impressao do valor total:
print(total = var)
-- ERROR:
File "XXXX", line 8
    total = var
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 21:33:20) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = 45+(int(input(8*15)

# Calculo do valor a ser pago, incluindo o frete:
total = print(var)

# Impressao do valor total:
print(total = var)
-- ERROR:
File "XXXX", line 8
    total = print(var)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 21:33:25) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = 45+(int(input(8*15)

# Calculo do valor a ser pago, incluindo o frete:
total = print(var)

# Impressao do valor total:
print(total = var)
-- EXECUTION TIME:
0.207283
-- ERROR:
  File "/home/codebench/codes/1595/2894/main.py", line 8
    total = print(var)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 21:34:21) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = 45+(int(input(8*15)

# Calculo do valor a ser pago, incluindo o frete:
total = 225

# Impressao do valor total:
print(total)
-- ERROR:
File "XXXX", line 8
    total = 225
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:28:39) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = var * 8 + 5

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.179384
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
14.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2853.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991901.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:28:41) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = var * 8 + 5

# Impressao do valor total:
print(total)
-- OUTPUT:
14.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:29:07) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = var * 8 + 5

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.182996
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
14.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2853.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991901.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:29:29) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = var * 8 +5

# Impressao do valor total:
print(total)
-- OUTPUT:
14.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:29:32) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = var * 8+5

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.139342
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
14.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2853.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991901.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:29:59) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = var * 8+5

# Impressao do valor total:
print(total)
-- OUTPUT:
14.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:30:17) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = var * 8+5

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.190123
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
14.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2853.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991901.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:30:44) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = var * 8+5

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.129347
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
14.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2853.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991901.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:31:04) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = var * 8+ 45

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.135398
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:36:49) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = var * 8+ 45

# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:36:53) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = var * 8+ 45

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.184334
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:37:22) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = var * 8+ 45

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.135699
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:37:23) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = var * 8+ 45

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.144268
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:55:41) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = var * 8+ 45

# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:55:44) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("qual o valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = var * 8+ 45

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.18628
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
